# DE_Projet2

./: .gitignore  education_notebook.ipynb  jupyter_education_exo1.ipynb  requirements.txt
de-projet-2/: pyproject.toml
