[project]
name = "de-projet-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Magali Courté",email = "courte.magali@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "de_projet_2", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
